--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -104,6 +104,14 @@ jobs:
           script: |
             dotnet test --filter TestCategory=Unit
 
+      - task: PublishTestResults@2
+        displayName: "Publish Test Results **/*.trx"
+        condition: eq(variables.SHOULD_RUN, 'True')
+        inputs:
+          testRunner: VSTest
+          testRunTitle: "Linux Tests ($(FRAMEWORK)) (Attempt $(System.JobAttempt))"
+          testResultsFiles: "**/*.trx"
+
       - task: CopyFiles@2
         displayName: "Copy files to the artifacts folder"
         condition: eq(variables.SHOULD_RUN, 'True')
@@ -181,7 +189,16 @@ jobs:
           targetType: inline
           script: |
             dotnet test --filter TestCategory=Unit
-
+      - task: PublishTestResults@2
+        displayName: "Publish Test Results **/*.trx"
+        inputs:
+          testRunner: VSTest
+          testResultsFiles: "**/*.trx"
+          testRunTitle: "Windows Tests ($(FRAMEWORK)) (Attempt $(System.JobAttempt))"
+          platform: Windows
+          configuration: "Debug UT + Release E2E ($(FRAMEWORK))"
+        condition: eq(variables.SHOULD_RUN, 'True')
+        
       - task: ComponentGovernanceComponentDetection@0
         displayName: Component Governance Detection
         condition: eq(variables.SHOULD_RUN, 'True')
